syntax = "proto3";
import "scanned.proto";

option java_package = "su.pank.simplescanner.proto";
option java_multiple_files = true;


message UserPreferences{
  bool hasGoogleAPI = 1;
  bool isDarkTheme = 2;
  bool isDynamicTheme = 3;
  ScansSettings scanSettings = 4;
}

